--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Asap', sans-serif;
+    /* makes elements unselectable */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 body {
