--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ header > h1 {
     height: 100px;
 }
 
-#action-message {
+#action-msg {
     font-size: 20px;
     font-weight: bold;
     color: white;
